01-06-2025

    Sam (makefile, main.cpp):
        - Adicionado o arquivo de log de alterações
        - Atualizado o makefile para incluir o background_object (quem conseguir testar o makefile depois teste)
        - Corrigida a inicialização incorreta da fonte para escrita do texto na tela de morte
            - Agora a fonte é customizada
            - A fonte é corretamente inicializada somente uma vez e destruída
            - O texto aparece um pouco mais acima na tela
    
    Sam (assets, main.cpp):
        - Adicionadas mais duas camadas de montanhas para o cenário

04-06-2025

    Sam (assets, main.cpp):
        - Corrigido um problema que fazia com que a velocidade dos canos não fosse resetada após o reinício
        - Adicionada grama
        - Modificados os sprites das montanhas para não incluir lineart
        - Ajustado a posição de desenho das montanhas

    Sam (assets, main.cpp):
        - Atualizado sprite do pássaro
        - Atualizado sprite dos canos
        - Levemente aumentada a velocidade de movimento da grama
    
    Pedro(registration.cpp, registration.hpp)
        - Adicionadas funcionalidades para registro do player
        - Adicionadas funcões de manipulação do arquivo de armazenamento dos players
        - Adicionada função que obtém infos(username, score, games) de cada player
